--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,10 @@
 /*===== GOOGLE FONTS =====*/
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
 /*===== VARIABLES CSS =====*/
+html{
+  -webkit-user-select: none;
+  user-select: none;
+}
 :root {
   --header-height: 3rem;
   --font-semi: 600;
